<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_login">Ingreso a la Aplicación</string>
    <string name="welcome">Bienvenido, accede a las opciones desde el menú lateral</string>
    <string name="app_name">App Student</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="menu_itinerario">Itinerario</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_estadisticas">Estadísticas</string>
    <string name="menu_grabadora">Grabadora</string>
    <string name="item_acciones">Acciones</string>
    <string name="log_acciones">Ultimas Acciones</string>
    <string name="username_login">Nº Documento</string>
    <string name="password_login">Contraseña</string>
    <string name="register_login">Registrate!</string>
    <string name="signin_login">Ingresa!</string>
    <string name="user_name">Nombre</string>
    <string name="create_user">Crear Usuario!</string>
    <string name="title_itinerario">Itinerarios</string>
    <string name="title_notas">Calculo y Registro de Notas</string>
    <string name="title_estadisticas">Estadisticas de Notas</string>
    <string name="title_grabadora">Grabadora de Audio</string>
    <string name="name_itinerario">Nombre de Itinerario</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="user_phone">Telefono</string>
    <string name="name_notas">Nombre de la Materia</string>
    <string name="score_nota1">Nota 1</string>
    <string name="score_nota2">Nota 2</string>
    <string name="score_nota3">Nota 3</string>
    <string name="rec_audio">Iniciar Grabación</string>
    <string name="stop_rec_audio">Detener Grabación</string>
    <string name="play_rec">Reproducir Grabación</string>
    <string name="stop_rec">Detener Grabación</string>
    <string name="rec_name">Nombre de Audio</string>
    <string name="title_acciones">Ultimas 5 Acciones</string>
</resources>
