<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_itinerario"
            android:icon="@drawable/ic_event_note"
            android:title="@string/menu_itinerario" />
        <item
            android:id="@+id/menu_notas"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_notas" />
        <item
            android:id="@+id/menu_estadisticas"
            android:icon="@drawable/ic_show_chart"
            android:title="@string/menu_estadisticas" />
        <item
            android:id="@+id/menu_grabadora"
            android:icon="@drawable/ic_mic"
            android:title="@string/menu_grabadora" />
    </group>

    <item android:title="@string/item_acciones">
        <menu>
            <item
                android:id="@+id/menu_log"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/log_acciones"/>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/ic_phonelink_erase"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>
