<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="340dp"
        android:layout_height="288dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="354dp"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:hint=""
            app:counterEnabled="false"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:hint="@string/rec_name"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRecord"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_below="@+id/textInputLayout2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="64dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="60dp"
            android:drawableStart="@drawable/ic_mic"
            android:fontFamily="@font/open_sans"
            android:text="@string/rec_audio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_below="@+id/btnRecord"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="55dp"
            android:drawableStart="@drawable/ic_mic_off"
            android:fontFamily="@font/open_sans"
            android:text="@string/stop_rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRecord" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@+id/btnStop"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="51dp"
            android:drawableStart="@drawable/ic_play_circle_filled"
            android:fontFamily="@font/open_sans"
            android:text="@string/play_rec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnStop" />

        <Button
            android:id="@+id/btnStopPlay"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_below="@+id/btnPlay"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="67dp"
            android:drawableStart="@drawable/ic_pause_circle_filled"
            android:fontFamily="@font/open_sans"
            android:text="@string/stop_rec_audio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listGrabacion"
        android:layout_width="349dp"
        android:layout_height="376dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />


</android.support.constraint.ConstraintLayout>